# nlpia-bot

./: .coveragerc  .gitignore  .gitlab-ci.maria.yml  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE.txt  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  config.toml  environment-simplet-3.7.yml  environment-simplet.yml  environment-windoze.yml  environment.yml  health.ini  install.sh  manage.py  nlpia-bot.ini  requirements.txt  setup.cfg  setup.py
bot/: admin.py  forms.py  models.py  models_notes.py  tests.py  urls.py
bot/migrations/: 0001_initial.py  0004_auto_20190926_0205.py
cache_dir/: cached_train_distilbert_128_130319.REMOVED.git-id
conda/: environment-mac.yml  environment-windoze.yml
data/: WikiQA.csv.REMOVED.git-id  chatbot-depth3.txt.REMOVED.git-id  eliza-depth3.csv.REMOVED.git-id  enwiki-latest-all-titles-in-ns0.gz.REMOVED.git-id  history-2020-02-27.json  history-2020-02-27.log.REMOVED.git-id  nlpia-bot.ini  spacy_languages.csv  wikipedia-pages-to-scrape.yml  wikipedia-title-vectors_sample.csv.REMOVED.git-id
data/WikiQA/: WikiQA-DataAugmentation.csv
data/agi/: 2020-consciousness-neuroscience-theory-recap.md
data/corpora/: dialog_fiction.yml  quotes.yml  sentiment-analysis-emotional-immaturity.yml
data/covid-19/: 2020-03-15-bert-test-results.yml  2020-03-16-demo-forcepoint-coronavirus-history.json
data/faq/: faq-general-python-data-science-2019-12.yml  faq-general-python-data-science-2020-01.yml  faq-general-python-data-science-2020-02.yml  faq-general-python-data-science-2020-03.yml  faq-python-data-science-for-healthcare-ucsd-dsdh-2019-12-31.yml  faq-self-help-nutrition.yml  glossary-dsdh.yml
data/life-coach/: depression-checklist-questions.yml  depression-score-example-statements-labeled.yml
data/qa/: history.json
data/testsets/: parul.yml  time.yml
django_apps/bot/: models.py  models_notes.py  views.py
docs/: 2019-08-22--San Diego Python User Group -- How to Build a Chatbot.odp  2019-08-22--San Diego Python User Group -- How to Build a Chatbot.odp.REMOVED.git-id  2019-12-19--FAQ-Bot.html  2019-12-19--FAQ-Bot.md  2020-05-27-qary-demo-video-script-overview.md  Elasticsearch.md  Hybrid Chatbot Architecture.html  Hybrid Chatbot Architecture.xml  Makefile  Tangible_AI_Letterhead.odt  Turkish parul_bots.md  authors.rst  brown-covid19-grant-proposal-v2-1page.odt  brown-covid19-grant-proposal.md  chatbot-dialog-graph.drawio  chatbot-dialog-graph.vsdx  chatbot-dialog-graph.xml  conda_environment_unresolved_conflicts.md  conf.py  index.rst  install.sh  lessons-learned.md  qary-lobes-modular-architecture.odp  qary-lobes-modular-architecture.odp.REMOVED.git-id  qary_question_repo.md  simple-transformer.ipynb  simple-transformer.ipynb.REMOVED.git-id  simple.ini  slides -- NLP Tutorial Part 3 -- How to Build a Chatbot Exective.md  vision-sprint-planning-june-25.md  vision.md  wiki_elastic_direct.ipynb
docs/Grants/: brown-covid19-grant-proposal-v2-1page.odt  brown-covid19-grant-proposal-v3-2page.odt  brown-covid19-grant-proposal.md  brown-covid19-grant-proposal.odt  brown-covid19-grant-proposal.pandoc-style.odt
docs/chatbot-spec-language/: rasa_init_dirtree.md
docs/ideas/: 2020-04-25-qa-for-conversation-and-mindfulness-ita-daki-mas.md  Turkish parul_bots.md  applications-and-skills.md  dialog-graph-representation-and-data-model-options.md
docs/lessons-learned/: problem-git-large-file-removal-with-bfg-and-git-filter-repo.md  sublime.md
docs/notebooks/: elasticsearch-docker.ipynb  elasticsearch-highlights.ipynb  elasticsearch-indexing.ipynb  elasticsearch-queries.ipynb  multiword_tokenizer.ipynb  parse-wikipedia-article.ipynb
docs/talks/: 2019-08-22--San Diego Python User Group -- How to Build a Chatbot.odp  2019-12-19--FAQ-Bot.html  2019-12-19--FAQ-Bot.md  2020-04-23-San-Diego-Python-User-Group-monthly-meetup.md  2020-05-29--SDML--knowledge-graph-logic.md
docs/wiki/: contributors.md  crazy_ideas.md  index.rst  inspiration.md  skills.md
nlpia_bot/: clibot.py  constants.py  eliza_bots.py  journal.py  nima_bots.py  parul_bots.py  pattern_bots.py  patterns.py  qa_example.py  qa_train.py  scrape_wikipedia.py  search_fuzzy.py  search_fuzzy_bots.py  search_use.py  settings.py  spacy_language_model.py  template_generators.py  time_bots.py  urls.py
nlpia_bot/actions/: osm.py
nlpia_bot/data/: WikiQA.csv.REMOVED.git-id  dsfaq_plus_faq_data_science_and_machine_learning.yml  dsfaq_plus_faq_data_science_and_machine_learning.yml.REMOVED.git-id  eliza-depth3.csv  movie_dialog.csv.REMOVED.git-id
nlpia_bot/etl/: elastic.py  etl.py  faqs.py  glossaries.py  journal.py  nboost.py  qa_datasets.py  qcembed.py  scrape_wikipedia.py  vectors.py  wikisearch.py  wiktionary.py  yaml.py
nlpia_bot/plugins/: ircbot.py
nlpia_bot/scores/: quality_score.py  semantics_score.py  sentiment_score.py  spell_score.py
nlpia_bot/skills/: elastic_bots.py  eliza.py  eliza_bots.py  faq_bots.py  glossary_bots.py  juan_bots.py  parul_bots.py  pattern_bots.py  qa_bots.py  qa_models.py  search_fuzzy.py  search_fuzzy_bots.py  time_bots.py
nlpia_bot/wip/: context.py
pollsite/first_project/: manage.py
qary/: bert_language_model.py  clibot.py  constants.py  qa_train.py  spacy_language_model.py
qary/data/: medical_sentences.json  qary.ini
qary/etl/: basebots.py  do.py  doc_cache.py  elastic.py  faqs.py  fileutils.py  glossaries.py  journal.py  knowledge_extraction.py  nboost.py  nesting.py  netutils.py  qa_datasets.py  qcembed.py  scrape_wikipedia.py  spaces.py  vectors.py  wikiparse.py  wiktionary.py  yml.py
qary/models/: README.md  cortex.py  cortex.yaml
qary/plugins/: ircbot.py
qary/scores/: quality_score.py  semantic_score.py  semantics_score.py  sentiment_score.py  (+2 more)
qarysite/: manage.py
scripts/: checkgpu.sh  release.sh  requirements-django.txt  requirements.txt  setup_dev_env.sh
tests/: conftest.py  donttest_ircbot.py  test_clibot.py  test_datafile_format.py  test_doctests.py  test_qa_bots.py  test_skeleton.py  test_spacy_language_model.py  travis_install.sh
(+188 files in other folders)
