# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = nlpia_bot
description = An open framework and dataset for building a distributed-agent chatbot based on "Natural Language Processing in Action".
author = hobs
author-email = hobs+github@totalgood.com
license = mit
url = https://nlpia.org
long-description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
packages =
    nlpia_bot

include_package_data = True
package_data=
    data =
        *.csv
        *.gz
        *.zip
        *.json
        *.bin
        *.txt
package_dir =
    =.
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires =
    pyscaffold>=3.1a0,<3.2a0
    setuptools
install_requires =
    boto3
    ConfigArgParse
    fuzzywuzzy
    gitpython
    lxml
    nltk
    pandas
    pre-commit
    psycopg2
    regex
    seaborn
    spacy>=2.2.2,<2.3.0
    scikit-learn
    scipy
    tensorboardX
    tensorflow
    torch
    transformers>=2.4.1,<2.5.0
    wikipedia-api
    environment

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = .
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install nlpia_bot[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
# Add here additional requirements for extra features, to install with:
# `pip install nlpia-bot[django] or pip install nlpia-bot[pytorch]` like:
django =
    celery
    cookiecutter
    django
    channels
    django_extensions

pytorch =
    torch

keras =
    keras


[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = nlpia_bot.module:function
# For example:
console_scripts =
    ircbot = nlpia_bot.ircbot:run
    bot = nlpia_bot.clibot:main
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
addopts =
    --doctest-modules
    --doctest-glob='test*.md'
    --cov nlpia_bot
    --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    tests/*
    imagecanopy/migrations/*
# E128 underindented for visual indent
# E501 line too long
# W291 - Remove trailing whitespace.
ignore =
    E226,
    E501,
    E302,
    E41,
    W504,
    W291,
    E123,
    E128
max-line-length = 180
max-complexity = 17

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = nlpia_bot
extensions =
    django
    travis
    pre_commit
    gitlab
