# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = qary
description = "An open framework and dataset for building a distributed-agent chatbot based on _Natural Language Processing in Action_."
author = hobs
author-email = hobs+github@totalgood.com
license = mit
url = https://nlpia.org
long-description = file: README.md
long-description-content-format = text/markdown
description-content-type = text/markdown
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
packages =
    qary
    qary.actions
    qary.data
    qary.etl
    qary.plugins
    qary.scores
    qary.skills
    qary.wip
    # qarysite

include_package_data = True
# package_data =
#     data = *.json
package_dir =
    =.

# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires =
    pyscaffold>=3.1a0,<3.2a0
    setuptools

install_requires =
    boto3==1.13.19
    botocore==1.16.19
    ConfigArgParse==1.2.2
    docutils==0.15.2
    django==3.0.7
    editdistance==0.5.3
    elasticsearch==7.6.0
    environment==1.0.0
    # en_core_web_md==2.2.5
    # en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.2.5/en_core_web_md-2.2.5.tar.gz
    gitpython==3.1.1
    lxml==4.5.0
    nltk==3.5
    pandas==1.0.3
    pre_commit==2.3.0
    python-slugify==4.0.0
    # psycopg2==2.8.5
    rapidfuzz==0.9.1
    regex==2020.4.4
    seaborn==0.10.0
    spacy==2.2.4
    scikit-learn==0.22.2
    scipy==1.4.1
    tensorboardX==2.0
    tensorflow==2.2.0
    tensorboard==2.2.2
    torch==1.4.0
    tqdm>=4.38.0,<5.0.0
    transformers>=2.4.1,<2.5.0
    wikipedia-api==0.5.4
    Sphinx==3.0.3
    recommonmark==0.6.0
    m2r==0.2.1


# The usage of tests_require is discouraged, see `Dependency Management` docs
tests_require =
    pytest
    pytest-cov

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
python_requires = >=3.6


[options.packages.find]
where = .
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install qary[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

# Add here additional requirements for extra features, to install with:
# `pip install qary[django] or pip install qary[pytorch]` like:
django =
    django-celery==3.3.1
    django-elasticsearch-dsl-drf==0.20.8
    django-elasticsearch-dsl==7.1.1
    django-extensions==2.2.9
    Django==2.2.11
    djangorestframework==3.11.0
    cookiecutter==1.7.2
    django-channels==0.7.0
    django-extensions==2.2.9

pytorch =
    torch

docs =
    qary[sphinx]
sphinx =
    Sphinx
    m2r

postgres =
    psycopg2-binary==2.8.3


[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = qary.module:function
# For example:
console_scripts =
    ircbot = qary.ircbot:run
    qary = qary.clibot:main
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
addopts =
    --doctest-modules
    --doctest-glob='test*.md'
    --cov qary
    --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    tests/*
    imagecanopy/migrations/*
# E128 underindented for visual indent
# E501 line too long
# W291 - Remove trailing whitespace.
ignore =
    E226,
    E501,
    E302,
    E41,
    W504,
    W291,
    E123,
    E128
max-line-length = 180
max-complexity = 17

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = qary
extensions =
    django
    travis
    pre_commit
    gitlab
